Updated links on setup page

--- a/let-me-share-my-setup-with-you.html
+++ b/let-me-share-my-setup-with-you.html
@@ -58,18 +58,18 @@
 
                         <p>It happens though believe it or not, and the following is what I use on a day to day basis to help me get the job done at work:
                             <ul>
-                                <li><a href="https://www.google.com/intl/en_us/chrome/browser/">Chrome with inspector tools</a> (my #1, "couldn't live without" tool)</li>
-                                <li><a href="http://www.sublimetext.com/3">Sublime Text 3</a> (usually with 3-columns - one for html, one for css, and one for js)</li>
-                                <li><a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line">Mac OSX Terminal</a> - Main uses are:
+                                <li><a href="https://www.google.com/intl/en_us/chrome/browser/" target="_blank">Chrome with inspector tools</a> (my #1, "couldn't live without" tool)</li>
+                                <li><a href="http://www.sublimetext.com/3" target="_blank">Sublime Text 3</a> (usually with 3-columns - one for html, one for css, and one for js)</li>
+                                <li><a href="http://blog.teamtreehouse.com/introduction-to-the-mac-os-x-command-line" target="_blank">Mac OSX Terminal</a> - Main uses are:
                                     <ul>
                                         <li><code>grunt watch</code> for live reload</li>
                                         <li>Subversion (svn) commands for version control</li>
                                         <li>Maven (mvn) commands for deploying</li>
                                     </ul>
                                 </li>
-                                <li><a href="http://www.skype.com">Skype</a> (this is our main form of communication when we're lazy)</li>
-                                <li><a href="http://www.charlesproxy.com/">Charles Proxy</a> (couldn't live without this either. map local files to files on a server so you don't have to keep installing / deploying while in development)</li>
-                                <li><a href="https://www.spotify.com">Spotify</a> (I'm usually the 'DJ' of the office, playing mostly indie-dance rawk)</li>
+                                <li><a href="http://www.skype.com" target="_blank">Skype</a> (this is our main form of communication when we're lazy)</li>
+                                <li><a href="http://www.charlesproxy.com/" target="_blank">Charles Proxy</a> (couldn't live without this either. map local files to files on a server so you don't have to keep installing / deploying while in development)</li>
+                                <li><a href="https://www.spotify.com" target="_blank">Spotify</a> (I'm usually the 'DJ' of the office, playing mostly indie-dance rawk)</li>
 
                             </ul>
 
@@ -80,6 +80,8 @@
                         <p>My family and I moved to Snoqualmie, WA in 2013 and couldn't be happier. We love everything about it. It's only 35 minutes from work (which is better than the hour it used to be), there are kids all over for our sons to play with, and it's got a nice small-town feel with still having all the shops and restaurants you could want.</p>
 
                         <p>My home desk is in my master bedroom, and looks out to the forest behind our house, which is also nice to look at while thinking about stuff. I bring my work laptop home so I can do office work, but also use my Chromeboox Pixel (thank you Google!) for personal stuff, which is mostly browsing reddit. :P</p>
+
+                        <p>As far as my setup for my personal projects (e.g. this site) go, it's basically the same except I'm using <a href="https://github.com/chapeljuice" target="_blank">GitHub</a> more and more now.</p>
 
                         <p class="lead">So that's it! Wanna share your workflow with me? Shoot me an email!
                         <br />
