--- a/let-me-share-my-setup-with-you.html
+++ b/let-me-share-my-setup-with-you.html
@@ -18,7 +18,7 @@
         <header class="ryan">
 
             <div class="chapel">
-                <a href="index.html"><img src="images/ryanchapel-logo-red.svg" class="logo" alt="website logo" /></a>
+                <a href="index.html"><img src="images/ryanchapel-logo-red.png" class="logo" alt="website logo" /></a>
 
                 <div class="is"><h1 title="...is the coolest.">Ryan Chapel.</h1></div>
 
