adding rel=author to google+ links

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                             <a href="https://twitter.com/ChapelJuice" class="social-links twitter" target="_blank">Twitter</a>
                             <a href="https://www.flickr.com/photos/chapelator/" class="social-links flickr" target="_blank">Flickr</a>
                             <a href="https://www.youtube.com/user/ChapelJuice" class="social-links youtube" target="_blank">YouTube</a>
-                            <a href="https://plus.google.com/+RyanChapel" class="social-links googleplus" target="_blank">Google+</a>
+                            <a href="https://plus.google.com/+RyanChapel?rel=author" class="social-links googleplus" target="_blank">Google+</a>
                         </p>
                     </div>
                 </div>
