Adding a menu icon (for future use).

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
 
                 <div class="is"><h1 title="...is the coolest.">Ryan Chapel.</h1></div>
 
+                <div class="really">
+                    <a class="menu closed"><span></span></a>
+                </div>
+
                 <nav class="the">
                     <ul>
                         <a href="resume.html">
