Adding new menu interaction, other cleanup.

--- a/about.html
+++ b/about.html
@@ -22,6 +22,10 @@
 
                 <div class="is"><h1 title="...is the coolest.">Ryan Chapel.</h1></div>
 
+                <div class="really closed">
+                    <a class="menu"><span></span></a>
+                </div>
+
                 <nav class="the">
                     <ul>
                         <a href="resume.html">
@@ -88,7 +92,7 @@
 
 
         <!-- include scripts -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 
         <!-- google analytics -->
         <script>
