--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
                 <div class="is"><h1 title="...is the coolest.">Ryan Chapel.</h1></div>
 
-                <div class="really">
-                    <a class="menu closed"><span></span></a>
+                <div class="really closed">
+                    <a class="menu"><span></span></a>
                 </div>
 
                 <nav class="the">
@@ -107,7 +107,7 @@
 
 
         <!-- include scripts -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 
         <!-- google analytics -->
         <script>
