--- a/styling-radios-and-checkboxes-for-the-future.html
+++ b/styling-radios-and-checkboxes-for-the-future.html
@@ -25,6 +25,10 @@
 
                 <div class="is"><h1 title="...is the coolest.">Ryan Chapel.</h1></div>
 
+                <div class="really closed">
+                    <a class="menu"><span></span></a>
+                </div>
+
                 <nav class="the">
                     <ul>
                         <a href="resume.html">
@@ -212,7 +216,7 @@
 
 
         <!-- include scripts -->
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
 
         <!-- google analytics -->
         <script>
