--- a/thanks.html
+++ b/thanks.html
@@ -51,6 +51,7 @@
                 <section class="thanks">
                     <p class="lead">Thanks! I'll get back to you shortly, I promise!</p>
                     <p>In the meantime, <a href="index.html">check out my articles by going back to the home page</a>.</p>
+                    <p class="emoji">(ಠ <span class="smile">‿</span> ಠ)</p>
                 </section>
 
             </div>
