Linking to hi-res images

--- a/let-me-share-my-setup-with-you.html
+++ b/let-me-share-my-setup-with-you.html
@@ -57,7 +57,7 @@
                         <p class="lead">So let's dive in!</p>
         
                         <h3>My desk at the office</h3>
-                        <a href="images/boom-work-shot.jpg"><img src="images/boom-work-shot.jpg" alt="My machine setup at the office" class="boom" /></a>
+                        <a href="images/boom-work-shot-hires.jpg"><img src="images/boom-work-shot.jpg" alt="My machine setup at the office" class="boom" /></a>
                         <p>I work in downtown Seattle, and <a href="https://twitter.com/ChapelJuice/status/341768886078803970/photo/1" target="_blank">with the amazing view I have</a> it's sometimes hard to get any work done.</p>
 
                         <p>It happens though believe it or not, and the following is what I use on a day to day basis to help me get the job done at work:
@@ -80,7 +80,7 @@
                         </p>
 
                         <h3>My desk when working from home</h3>
-                        <a href="images/boom-home-shot.jpg"><img src="images/boom-home-shot.jpg" alt="My machine setup at home" class="boom" /></a>
+                        <a href="images/boom-home-shot-hires.jpg"><img src="images/boom-home-shot.jpg" alt="My machine setup at home" class="boom" /></a>
                         <p>My family and I moved to Snoqualmie, WA in 2013 and couldn't be happier. We love everything about it. It's only 35 minutes from work (which is better than the hour it used to be), there are kids all over for our sons to play with, and it's got a nice small-town feel with still having all the shops and restaurants you could want.</p>
 
                         <p>My home desk is in my master bedroom, and looks out to the forest behind our house, which is also nice to look at while thinking about stuff. I bring my work laptop home so I can do office work, but also use my Chromeboox Pixel (thank you Google!) for personal stuff, which is mostly browsing reddit. :P</p>
