--- a/404.html
+++ b/404.html
@@ -49,6 +49,7 @@
 
                 <section class="four-oh-four">
                     <h2>uh-oh!</h2>
+                    <p class="emoji">ಠ_ಠ</p>
                     <p class="lead">Not sure what you're trying to do, but it didn't work! :(</p>
                     <p><a href="/">Go back to the homepage!</a></p>
                 </section>
